kubernetes/nestjs/rules-engine-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rules-engine-api-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: "localhost"
    http:
      paths:
      - path: /rules-engine-api
        pathType: Prefix
        backend:
          service:
            name: rules-engine-api-service
            port:
              number: 3000
